# math_tools

./: .gitignore  CMakeLists.txt  README.md  init_package.sh
Latex/: definitions.tex  math_tools.tex  packages.tex
UMLs/: .$chebyshev_reconstructor.drawio.bkp  chebyshev_reconstructor.drawio
benchmarks/: CMakeLists.txt  benchmark_T_SO3.cpp  benchmark_error_SO3.cpp
cmake/: Config.cmake.in  documentation_module.cmake  installation_module.cmake
docs/: Doxyfile.in
include/: chebyshev_differentiation.hpp  lie_algebra_utilities.hpp
src/: CMakeLists.txt  chebyshev_differentiation.cpp  lie_algebra_utilities.cpp
src/Chebyshev/: CMakeLists.txt  chebyshev_differentiation.cpp
src/Chebyshev/include/Chebyshev/: chebyshev_differentiation.hpp
src/Chebyshev/src/: chebyshev_differentiation.cpp
src/LieAlgebra/: CMakeLists.txt  lie_algebra_utilities.cpp
src/LieAlgebra/include/: lie_algebra_utilities.hpp
src/include/math_tools/Chebyshev/: chebyshev_differentiation.hpp
src/include/math_tools/LieAlgebra/: lie_algebra_utilities.hpp
tests/: CMakeLists.txt  test_Adg.cpp  test_SE3Pose.cpp  test_SO3_difference.cpp  test_T.cpp  test_chebyshev_reconstructor.cpp  test_expSO3.cpp  test_log.cpp  test_log_SO3.cpp  tests.cpp
tests/data/: Chebyshev_points.csv  analytic_functions.csv  compare.asv  compare.m  interpolated_function.csv  interpolation_points.csv  observed_function.csv
